language/move-lang/tests/move_check/translated_ir_tests/commands/break_outside_loop_in_if.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/break_outside_loop_in_if.move:2:15 ───
   │
 2 │     if (true) break
   │               ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body
   │

