language/move-lang/tests/move_check/translated_ir_tests/commands/break_outside_loop_in_if.move
fun main() {
    if (true) break
}

// check: break outside loop
